--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -28,6 +28,7 @@ a {
     color: darken($primary, 24%);
 }
 img {
+    
     max-width:100%;
     height:auto;
 }
@@ -39,11 +40,12 @@ h1,h2,h3,h4,h5,h6 {
     padding-top:50px;
 }
 .sitetag {
+    align-content: center;
     font-weight:700;    
     line-height:1.3;
     font-size:35px;
     @include media-breakpoint-up(sm) {
-        font-size:50px;
+        font-size:35px;
         line-height:1.2;
     }
 }
@@ -118,6 +120,7 @@ img, img:hover {
     margin-bottom:40px;
     margin-top:40px;
 }
+
 .sidebar {
     position: fixed;
     left: 0px;
@@ -192,7 +195,7 @@ img, img:hover {
     top: 0;
     left: 0;
     height: 100%;
-    width: 420px;
+    width: 300px;
     background: #fff;
     padding: 0;
     margin: 0;
@@ -204,7 +207,7 @@ img, img:hover {
     ul {
         float: left;
         width: 100%;
-        padding: 80px 30px 80px 100px;
+        padding: 80px 30px 80px 80px;
         h3 {
             margin-bottom:30px;
         }
@@ -239,7 +242,7 @@ img, img:hover {
 .blog-grid-item {  
     color: #333;
     padding: 0;
-    display: flex;
+    // display: flex;
     align-items:center;
     .author-thumb {
         width:40px;
@@ -393,7 +396,7 @@ img, img:hover {
 }
 
 // blog 
-.article-post, .entry-header, .comments, .rating, .authorbox {
+.article-post, .entry-header, .comments, .rating, .authorbox, .summary{
     max-width: 740px;
     padding-left: 20px;
     padding-right: 20px;
