--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,9 @@
 
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
 
+<!-- Clicky -->
 <script async data-id="101464662" src="//static.getclicky.com/js"></script>
-
+<!-- change your GA id in _config.yml -->
 <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
@@ -29,7 +30,7 @@
 </head>
 
 {% if jekyll.environment == 'production' %}
-<!-- change your GA id in _config.yml -->
+<!-- Clarity -->
 <script async src="https://www.googletagmanager.com/gtag/js?id={{site.google_analytics}}"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
