--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -136,11 +136,11 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-12 text-center text-lg-left">
-                Copyright © {{ site.time | date: "%Y" }} <a href="{{ site.baseurl }}/">{{ site.name }}</a> 
+                Copyright © {{ site.time | date: "%Y" }} <a href="https://github.com/stotramala108/stotramala.github.io">{{ site.name }}</a> 
             </div>
 
             <div class="col-md-6 col-sm-12 text-center text-lg-right">    
-                <a target="_blank" href="{{ site.baseurl }}/termsofserviceprivacypolicy">Terms of Service & Privacy Policy</a>
+                <a target="_blank" href="https://github.com/stotramala108/stotramala.github.io">Terms of Service & Privacy Policy</a>
             </div>
         </div>
     </div>
